k8s/seed.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: play
